--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.11",
+    "font-awesome-loader": "^1.0.2",
     "html-webpack-plugin": "^2.29.0",
     "lost": "^8.2.1",
     "node-sass": "^4.5.3",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.14.3"
   },
